# Trix-TUI

./: .gitignore  .npmignore  CHANGELOG.md  DETAIL_DOC.md  LICENSE  README.md  Testing.md  _fix.py  app.py  core_bridge.py  divider_widget.py  git_history_screen.py  git_menu_screen.py  go.mod  main.go  main.py  package.json  pyproject.toml  screens.py  search_widget.py  syntax_setup.py  terminal_widget.py  test_panel_clicks.py  themes.py
.kimchi/docs/: ui-suggestions.md
Formula/: trix-ide.rb
backend/: bridge.py
bucket/: trix-ide.json
frontend/: package.json  tsconfig.json
frontend/src/: App.tsx  bridge.ts  index.tsx  store.ts
frontend/src/components/: BottomBar.tsx  CommandPalette.tsx  Divider.tsx  Editor.tsx  FileTree.tsx  Header.tsx  PanelHeader.tsx  TerminalPanel.tsx
legacy/: app.py  main.py  screens.py  themes.py
trix/: __init__.py  divider_widget.py  main.py  search_widget.py  terminal_widget.py  themes.py
trix_ide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
winget/Zarl-prog/Trix-IDE/0.3.1/: Trix-IDE.installer.yaml  Trix-IDE.locale.en-US.yaml  Trix-IDE.yaml
