[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trix-ide"
version = "0.1.0"
description = "A terminal-native IDE built with Textual"
requires-python = ">=3.10"
authors = [
    { name = "Asim Junaidi" },
]
dependencies = [
    "textual>=0.80.0",
    "pywinpty",
    "pyperclip",
]

[project.scripts]
trix = "app:run"

[tool.setuptools]
py-modules = ["main", "app", "screens", "themes", "terminal_widget", "search_widget"]

[tool.setuptools.package-data]
"*" = ["ayu.json"]
