[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trix-ide"
version = "0.2.0"
description = "A terminal-native IDE built with Textual"
requires-python = ">=3.10"
authors = [
    { name = "Asim Junaidi" },
]
dependencies = [
    "textual>=0.80.0",
    "pyperclip",
]

[project.optional-dependencies]
windows = ["pywinpty"]

[project.scripts]
trix = "app:run"

[tool.setuptools]
py-modules = ["main", "app", "screens", "themes", "terminal_widget", "divider_widget", "search_widget", "git_history_screen"]

[tool.setuptools.package-data]
"*" = ["ayu.json"]
