[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "trix-ide"
version = "0.3.0"
description = "A terminal-native IDE built with Textual"
requires-python = ">=3.10"
authors = [
    { name = "Asim Junaidi" },
]
dependencies = [
    "textual>=0.80.0",
    "pyperclip",
]

[project.optional-dependencies]
windows = ["pywinpty"]

[project.scripts]
trix = "app:run"

[tool.setuptools]
py-modules = ["main", "app", "screens", "themes", "search_widget", "git_menu_screen", "syntax_setup"]

[tool.setuptools.package-data]
"*" = ["ayu.json"]
